--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,10 @@
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
+    "presets": [
+        "@babel/preset-env"
+    ],
+    "parser": "@babel/eslint-parser",
     "dependencies": {
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
