--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
         "mongoose": "^7.4.1",
         "multer": "^1.4.5-lts.1",
         "nodemon": "^3.0.1",
+        "stripe": "^13.7.0",
         "validator": "^13.11.0"
     }
 }
